--- a/css/estilos.css
+++ b/css/estilos.css
@@ -47,4 +47,11 @@ body {
     width: 100px;
 }
 
-
+.counter {
+    background-color: #F0F0F0;
+    padding: 2px 6px;
+    border-width: 1px;
+    border-radius: 10%;
+    border-color: black;
+    width: 10px;
+}
