--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,6 +42,7 @@ body {
 
 .row {
     display: flex;
+    align-items: center;
 }
 
 .imgRow {
@@ -78,9 +79,15 @@ body {
 
 .pRow {
     align-content: center;
-    margin: 0px;
+    margin: 10px;
     font: message-box;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
+
+/* .dButton {
+    align-content: center;
+    width: 22px;
+    height: 22px;
+} */
