--- a/css/estilos.css
+++ b/css/estilos.css
@@ -52,11 +52,12 @@ body {
 
 .counter {
     background-color: #F0F0F0;
-    padding: 2px 6px;
+    padding: 2px 10px;
     border-width: 1px;
     border-radius: 10%;
     border-color: black;
-    width: 10px;
+    width: 8px;
+    text-align: center;
 }
 
 .page.change {
